# Gragzo

./: .gitignore  CMakeLists.txt  README.md
cmake/: LinkASSIMP.cmake
include/: Camera.h  CollisionDetection.hpp  RigidBody.hpp  Shape.hpp  SoftBody.hpp  Texture.hpp  gjk.hpp  gjkSimplex.hpp  gragzo.hpp  gui_parameters.hpp  mesh.h  mesh.hpp  scene.hpp  shader.hpp
shaders/: frag3d.fs  vert3d.vs
source/: CollisionDetection.cpp  RigidBody.cpp  Texture.cpp  gjk.cpp  main.cpp  mesh.cpp  utils.cpp
